Fix image layout shifts

--- a/assets/css/partials/milligram/image.css
+++ b/assets/css/partials/milligram/image.css
@@ -1,5 +1,6 @@
 /* Image */
 
 img {
+  height: auto;
   max-width: 100%;
 }
